--- a/index.html
+++ b/index.html
@@ -56,10 +56,9 @@ https://templatemo.com/tm-464-ultra-profile
 			<div class="row">
 				<div class="col-md-2 col-sm-1"></div>
 				<div class="col-md-8 col-sm-10">
-					<h1 class="tm-home-title"><strong>John White</strong></h1>
-					<h2 class="tm-home-subtitle">Creative Director</h2>
-					<p>I am a professional <strong>UX Designer</strong> and <strong>Front-End Developer</strong> creating modern and responsive designs for <strong>Web</strong> and <strong>Mobile</strong>. Let us work together. Thank you.</p>
-					<a href="#work" class="btn btn-default smoothScroll tm-view-more-btn">Let's Begin</a>
+					<h1 class="tm-home-title"><strong>Harvey Ranulo</strong></h1>
+					<h2 class="tm-home-subtitle">A USTP Student</h2>
+					<a href="#work" class="btn btn-default smoothScroll tm-view-more-btn">Let's GO!</a>
 				</div>
 				<div class="col-md-2 col-sm-1"></div>
 			</div>
@@ -72,30 +71,27 @@ https://templatemo.com/tm-464-ultra-profile
 		<div class="container">
 			<div class="row">
 				<div class="col-md-offset-1 col-md-11">
-					<h2 class="title">My <strong>Work</strong></h2>						
+					<h2 class="title">A <strong>USTP Student</strong></h2>						
 				</div>
 				<div class="col-md-4 col-sm-4">
 					<div class="work-wrapper">
 						<i class="fa fa-link"></i>
-						<h3 class="text-uppercase tm-work-h3">Mobile UX</h3>
+						<h3 class="text-uppercase tm-work-h3">My Favourite Manwha is Solo Leveling</h3>
 						<hr>
-						<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet. Dolore magna.</p>
 					</div>
 				</div>
 				<div class="col-md-4 col-sm-4">
 					<div class="work-wrapper">
 						<i class="fa fa-flash"></i>
-						<h3 class="text-uppercase tm-work-h3">Web Design</h3>
+						<h3 class="text-uppercase tm-work-h3">My Favourite Manga is That Time I got Reincarnated as a Slime</h3>
 						<hr>
-						<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet. Dolore magna.</p>
 					</div>
 				</div>
 				<div class="col-md-4 col-sm-4">
 					<div class="work-wrapper">
 						<i class="fa fa-dashboard"></i>
-						<h3 class="text-uppercase tm-work-h3">HTML Templates</h3>
+						<h3 class="text-uppercase tm-work-h3">My Favourite Manhua is Your Talent Is Mine</h3>
 						<hr>
-						<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet. Dolore magna.</p>
 					</div>
 				</div>
 			</div>
@@ -116,10 +112,10 @@ https://templatemo.com/tm-464-ultra-profile
 					<div class="iso-section">
 						<ul class="filter-wrapper clearfix">
 							<li><a href="#" class="opc-main-bg selected" data-filter="*">All</a></li>
-							<li><a href="#" class="opc-main-bg" data-filter=".html">HTML</a></li>
-							<li><a href="#" class="opc-main-bg" data-filter=".photoshop">Photoshop</a></li>
-							<li><a href="#" class="opc-main-bg" data-filter=".wordpress">Wordpress</a></li>
-							<li><a href="#" class="opc-main-bg" data-filter=".mobile">Mobile</a></li>
+							<li><a href="#" class="opc-main-bg" data-filter=".html">GAMES</a></li>
+							<li><a href="#" class="opc-main-bg" data-filter=".photoshop">PHOTOSHOP</a></li>
+							<li><a href="#" class="opc-main-bg" data-filter=".wordpress">COMICS</a></li>
+							<li><a href="#" class="opc-main-bg" data-filter=".mobile">ANIME</a></li>
 						</ul>
 						<div class="iso-box-section">
 							<div class="iso-box-wrapper col4-iso-box">
@@ -127,8 +123,7 @@ https://templatemo.com/tm-464-ultra-profile
 									<div class="portfolio-thumb">
 										<img src="images/portfolio-img1.jpg" class="fluid-img" alt="portfolio img">
 										<div class="portfolio-overlay">
-											<h3 class="portfolio-item-title">UX Design</h3>
-											<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonumm.</p>
+											<h3 class="portfolio-item-title">Mobile Legends</h3>
 										</div>
 									</div>
 								</div>
@@ -136,8 +131,7 @@ https://templatemo.com/tm-464-ultra-profile
 									<div class="portfolio-thumb">
 										<img src="images/portfolio-img2.jpg" class="fluid-img" alt="portfolio img">
 										<div class="portfolio-overlay">
-											<h3 class="portfolio-item-title">UX Design</h3>
-											<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonumm.</p>
+											<h3 class="portfolio-item-title">Basic Photo Editing</h3>
 										</div>
 									</div>
 								</div>
@@ -145,8 +139,7 @@ https://templatemo.com/tm-464-ultra-profile
 									<div class="portfolio-thumb">
 										<img src="images/portfolio-img3.jpg" class="fluid-img" alt="portfolio img">
 										<div class="portfolio-overlay">
-											<h3 class="portfolio-item-title">UX Design</h3>
-											<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonumm.</p>
+											<h3 class="portfolio-item-title">SOLO LEVELING</h3>
 										</div>
 									</div>
 								</div>
@@ -154,8 +147,7 @@ https://templatemo.com/tm-464-ultra-profile
 									<div class="portfolio-thumb">
 										<img src="images/portfolio-img4.jpg" class="fluid-img" alt="portfolio img">
 										<div class="portfolio-overlay">
-											<h3 class="portfolio-item-title">UX Design</h3>
-											<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonumm.</p>
+											<h3 class="portfolio-item-title">SCI FI</h3>
 										</div>
 									</div>
 								</div>
@@ -163,8 +155,7 @@ https://templatemo.com/tm-464-ultra-profile
 									<div class="portfolio-thumb">
 										<img src="images/portfolio-img5.jpg" class="fluid-img" alt="portfolio img">
 										<div class="portfolio-overlay">
-											<h3 class="portfolio-item-title">UX Design</h3>
-											<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonumm.</p>
+											<h3 class="portfolio-item-title">Strategic games</h3>
 										</div>
 									</div>
 								</div>
@@ -172,8 +163,7 @@ https://templatemo.com/tm-464-ultra-profile
 									<div class="portfolio-thumb">
 										<img src="images/portfolio-img6.jpg" class="fluid-img" alt="portfolio img">
 										<div class="portfolio-overlay">
-											<h3 class="portfolio-item-title">UX Design</h3>
-											<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonumm.</p>
+											<h3 class="portfolio-item-title">Basic video Editing</h3>
 										</div>
 									</div>
 								</div>
@@ -181,8 +171,7 @@ https://templatemo.com/tm-464-ultra-profile
 									<div class="portfolio-thumb">
 										<img src="images/portfolio-img7.jpg" class="fluid-img" alt="portfolio img">
 										<div class="portfolio-overlay">
-											<h3 class="portfolio-item-title">UX Design</h3>
-											<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonumm.</p>
+											<h3 class="portfolio-item-title">That Time I Got Reincarnated As A Slime</h3>
 										</div>
 									</div>
 								</div>
@@ -190,8 +179,7 @@ https://templatemo.com/tm-464-ultra-profile
 									<div class="portfolio-thumb">
 										<img src="images/portfolio-img8.jpg" class="fluid-img" alt="portfolio img">
 										<div class="portfolio-overlay">
-											<h3 class="portfolio-item-title">UX Design</h3>
-											<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonumm.</p>
+											<h3 class="portfolio-item-title">Romance</h3>
 										</div>
 									</div>
 								</div>
@@ -210,25 +198,24 @@ https://templatemo.com/tm-464-ultra-profile
 			<div class="row">
 				<div class="col-md-6 col-sm-6">					
 					<h2 class="title">My <strong>Profile</strong></h2>
-					<p><span class="tm-info-label">Name</span> John White</p>
-					<p><span class="tm-info-label">Birthday</span> December 24, 1996</p>
-					<p><span class="tm-info-label">Address</span> Melbourne Victoria 3000 Australia</p>
-					<p><span class="tm-info-label">Phone</span> +001 020 0340 | 009 080 0760</p>
-					<p><span class="tm-info-label">Email</span> hello@company.com</p>
-					<p><span class="tm-info-label">Website</span> <a href="#" class="tm-red-text">www.company.com</a></p>
+					<p><span class="tm-info-label">Name</span> Harvey Kenneth Lance M. Ranulo</p>
+					<p><span class="tm-info-label">Birthday</span> March 16, 2003</p>
+					<p><span class="tm-info-label">Address</span> CDO, Pilippines</p>
+					<p><span class="tm-info-label">Phone</span> 09494133113</p>
+					<p><span class="tm-info-label">Email</span> ranuloharvey@gmail.com</p>
 				</div>
 				<div class="col-md-6 col-sm-6">
-					<h2 class="title"><strong>Some</strong> Skills</h2>
-					<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet. Dolore magna aliquam erat volutpat.</p>
-					<h4 class="tm-progress-label">Bootstrap <small class="progress-percent-small">100%</small></h4>
+					<h2 class="title"><strong>My</strong> Skills</h2>
+					<p>Sleeping, Reading Comics, and Playing ML</p>
+					<h4 class="tm-progress-label">READING COMICS <small class="progress-percent-small">100%</small></h4>
 					<div class="progress tm-progress">
 						<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%;"></div>
 					</div>
-					<h4 class="tm-progress-label">HTML5 <small class="progress-percent-small">90%</small></h4>
+					<h4 class="tm-progress-label">SLEEPING <small class="progress-percent-small">90%</small></h4>
 					<div class="progress tm-progress">
 						<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;"></div>
 					</div>
-					<h4 class="tm-progress-label">SEO <small class="progress-percent-small">80%</small></h4>
+					<h4 class="tm-progress-label">PLAYING ML <small class="progress-percent-small">80%</small></h4>
 					<div class="progress tm-progress">
 						<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div>
 					</div>
@@ -245,10 +232,9 @@ https://templatemo.com/tm-464-ultra-profile
 				<div class="col-md-offset-6 col-md-6 col-sm-offset-6 col-sm-7">
 					<div class="title">
 						<h2>This is <strong>me</strong></h2>
-						<h1 class="tm-red-text">Creative <strong>Director</strong></h1>
+						<h1 class="tm-red-text">A 2nd Year USTP <strong>Student </strong></h1>
 					</div>
-					<p>This is free Bootstrap v3.3.4 mobile friendly layout from <a rel="nofollow" href="https://templatemo.com">templatemo</a>. Feel free to use it for your website. Credit goes to <a rel="nofollow" href="https://pixabay.com">Pixabay</a> for photos used in this template. Dolore magna aliquam erat volutpat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet.</p>
-					<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet. Dolore magna aliquam erat volutpat.</p>
+					<p>Hoping to learn stuff</p>
 				</div>
 			</div>
 		</div>
@@ -308,7 +294,7 @@ https://templatemo.com/tm-464-ultra-profile
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12">					
-					<h2 class="title">Drop <strong>me a line</strong></h2>
+					<h2 class="title">Message <strong>me if you have Time</strong></h2>
 					<hr>					
 				</div>
 				<div class="col-md-1 col-sm-1"></div>
